--- a/fabricjschess/restart.html
+++ b/fabricjschess/restart.html
@@ -3,29 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Chess Game</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/4.5.0/fabric.min.js"></script>
+    <title>Fabric.js Chessboard with Enhanced Features</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.3.1/fabric.min.js"></script>
     <style>
         canvas {
             border: 1px solid #000;
         }
+        #history {
+            width: 400px;
+            height: 200px;
+            overflow-y: auto;
+            border: 1px solid #000;
+            margin-top: 10px;
+            padding: 5px;
+        }
+        #hud {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 10px;
+        }
     </style>
 </head>
 <body>
-    <canvas id="chessboard" width="400" height="400"></canvas>
+    <div id="hud">
+        <div id="white-timer">White: 00:00</div>
+        <div id="black-timer">Black: 00:00</div>
+    </div>
+    <canvas id="canvas" width="400" height="400"></canvas>
+    <div id="history"></div>
     <script>
-        const canvas = new fabric.Canvas('chessboard');
-        const boardSize = 8;
+        const canvas = new fabric.Canvas('canvas');
         const squareSize = 50;
+        let turn = 'white';
+        const history = [];
+        let whiteTime = 300; // 5 minutes
+        let blackTime = 300; // 5 minutes
+        let timerInterval;
+
+        // Initialize the timers
+        function startTimer() {
+            clearInterval(timerInterval);
+            timerInterval = setInterval(() => {
+                if (turn === 'white') {
+                    whiteTime--;
+                    updateTimerDisplay('white');
+                } else {
+                    blackTime--;
+                    updateTimerDisplay('black');
+                }
+            }, 1000);
+        }
+
+        function updateTimerDisplay(color) {
+            const timerElement = document.getElementById(`${color}-timer`);
+            const time = color === 'white' ? whiteTime : blackTime;
+            const minutes = String(Math.floor(time / 60)).padStart(2, '0');
+            const seconds = String(time % 60).padStart(2, '0');
+            timerElement.innerText = `${color.charAt(0).toUpperCase() + color.slice(1)}: ${minutes}:${seconds}`;
+            if (time <= 0) {
+                clearInterval(timerInterval);
+                alert(`${color.charAt(0).toUpperCase() + color.slice(1)} time's up!`);
+            }
+        }
 
         // Create the chessboard
-        function createBoard() {
-            for (let row = 0; row < boardSize; row++) {
-                for (let col = 0; col < boardSize; col++) {
+        function createChessboard() {
+            for (let row = 0; row < 8; row++) {
+                for (let col = 0; col < 8; col++) {
+                    const isLightSquare = (row + col) % 2 === 0;
                     const square = new fabric.Rect({
                         left: col * squareSize,
                         top: row * squareSize,
-                        fill: (row + col) % 2 === 0 ? 'white' : 'gray',
+                        fill: isLightSquare ? '#eee' : '#8B4513',
                         width: squareSize,
                         height: squareSize,
                         selectable: false
@@ -35,70 +84,126 @@
             }
         }
 
-        // Load images for chess pieces from Wikipedia
-        const pieceImages = {
-            black: {
-                rook: 'https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rdt45.svg',
-                knight: 'https://upload.wikimedia.org/wikipedia/commons/e/ef/Chess_ndt45.svg',
-                bishop: 'https://upload.wikimedia.org/wikipedia/commons/9/98/Chess_bdt45.svg',
-                queen: 'https://upload.wikimedia.org/wikipedia/commons/4/47/Chess_qdt45.svg',
-                king: 'https://upload.wikimedia.org/wikipedia/commons/f/f0/Chess_kdt45.svg',
-                pawn: 'https://upload.wikimedia.org/wikipedia/commons/c/c7/Chess_pdt45.svg'
-            },
-            white: {
-                rook: 'https://upload.wikimedia.org/wikipedia/commons/7/72/Chess_rlt45.svg',
-                knight: 'https://upload.wikimedia.org/wikipedia/commons/7/70/Chess_nlt45.svg',
-                bishop: 'https://upload.wikimedia.org/wikipedia/commons/b/b1/Chess_blt45.svg',
-                queen: 'https://upload.wikimedia.org/wikipedia/commons/1/15/Chess_qlt45.svg',
-                king: 'https://upload.wikimedia.org/wikipedia/commons/4/42/Chess_klt45.svg',
-                pawn: 'https://upload.wikimedia.org/wikipedia/commons/4/45/Chess_plt45.svg'
-            }
-        };
-
-        // Add pieces to the board
+        // Load SVG pieces onto the chessboard
         function addPieces() {
-            const pieces = [
-                { type: 'rook', color: 'black', position: { left: 0, top: 0 } },
-                { type: 'knight', color: 'black', position: { left: 1, top: 0 } },
-                { type: 'bishop', color: 'black', position: { left: 2, top: 0 } },
-                { type: 'queen', color: 'black', position: { left: 3, top: 0 } },
-                { type: 'king', color: 'black', position: { left: 4, top: 0 } },
-                { type: 'bishop', color: 'black', position: { left: 5, top: 0 } },
-                { type: 'knight', color: 'black', position: { left: 6, top: 0 } },
-                { type: 'rook', color: 'black', position: { left: 7, top: 0 } },
-                ...Array.from({ length: 8 }, (_, i) => ({ type: 'pawn', color: 'black', position: { left: i, top: 1 } })),
-                { type: 'rook', color: 'white', position: { left: 0, top: 7 } },
-                { type: 'knight', color: 'white', position: { left: 1, top: 7 } },
-                { type: 'bishop', color: 'white', position: { left: 2, top: 7 } },
-                { type: 'queen', color: 'white', position: { left: 3, top: 7 } },
-                { type: 'king', color: 'white', position: { left: 4, top: 7 } },
-                { type: 'bishop', color: 'white', position: { left: 5, top: 7 } },
-                { type: 'knight', color: 'white', position: { left: 6, top: 7 } },
-                { type: 'rook', color: 'white', position: { left: 7, top: 7 } },
-                ...Array.from({ length: 8 }, (_, i) => ({ type: 'pawn', color: 'white', position: { left: i, top: 6 } })),
+            const pieces = {
+                'r': 'https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rdt45.svg',
+                'n': 'https://upload.wikimedia.org/wikipedia/commons/e/ef/Chess_ndt45.svg',
+                'b': 'https://upload.wikimedia.org/wikipedia/commons/9/98/Chess_bdt45.svg',
+                'q': 'https://upload.wikimedia.org/wikipedia/commons/4/47/Chess_qdt45.svg',
+                'k': 'https://upload.wikimedia.org/wikipedia/commons/f/f0/Chess_kdt45.svg',
+                'p': 'https://upload.wikimedia.org/wikipedia/commons/c/c7/Chess_pdt45.svg',
+                'R': 'https://upload.wikimedia.org/wikipedia/commons/7/72/Chess_rlt45.svg',
+                'N': 'https://upload.wikimedia.org/wikipedia/commons/7/70/Chess_nlt45.svg',
+                'B': 'https://upload.wikimedia.org/wikipedia/commons/b/b1/Chess_blt45.svg',
+                'Q': 'https://upload.wikimedia.org/wikipedia/commons/1/15/Chess_qlt45.svg',
+                'K': 'https://upload.wikimedia.org/wikipedia/commons/4/42/Chess_klt45.svg',
+                'P': 'https://upload.wikimedia.org/wikipedia/commons/4/45/Chess_plt45.svg'
+            };
+
+            const boardState = [
+                ['r', 'n', 'b', 'q', 'k', 'b', 'n', 'r'],
+                ['p', 'p', 'p', 'p', 'p', 'p', 'p', 'p'],
+                ['.', '.', '.', '.', '.', '.', '.', '.'],
+                ['.', '.', '.', '.', '.', '.', '.', '.'],
+                ['.', '.', '.', '.', '.', '.', '.', '.'],
+                ['.', '.', '.', '.', '.', '.', '.', '.'],
+                ['P', 'P', 'P', 'P', 'P', 'P', 'P', 'P'],
+                ['R', 'N', 'B', 'Q', 'K', 'B', 'N', 'R']
             ];
 
-            pieces.forEach(piece => {
-                fabric.Image.fromURL(pieceImages[piece.color][piece.type], function(img) {
-                    img.set({
-                        left: piece.position.left * squareSize,
-                        top: piece.position.top * squareSize,
-                        scaleX: squareSize / img.width,
-                        scaleY: squareSize / img.height,
-                        selectable: true
-                    });
-                    canvas.add(img);
+            for (let row = 0; row < 8; row++) {
+                for (let col = 0; col < 8; col++) {
+                    const piece = boardState[row][col];
+                    if (piece !== '.') {
+                        fabric.loadSVGFromURL(pieces[piece], function(objects, options) {
+                            const svgPiece = fabric.util.groupSVGElements(objects, options);
+                            svgPiece.set({
+                                left: col * squareSize + squareSize / 2,
+                                top: row * squareSize + squareSize / 2,
+                                originX: 'center',
+                                originY: 'center',
+                                hasControls: false,
+                                selectable: true,
+                                pieceColor: piece === piece.toUpperCase() ? 'white' : 'black'
+                            });
+                            
+                            // Mouse event handlers
+                            svgPiece.on('mousedown', function() {
+                                console.log(`Piece selected: ${piece}`);
+                                if ((turn === 'white' && this.pieceColor === 'white') || 
+                                    (turn === 'black' && this.pieceColor === 'black')) {
+                                    canvas.setActiveObject(this);
+                                }
+                            });
+                            svgPiece.on('mouseup', function() {
+                                const activeObject = canvas.getActiveObject();
+                                if (activeObject === this) {
+                                    const fromPosition = coordsToPosition(this.left, this.top);
+                                    console.log(`Move from: ${fromPosition}`);
+                                    alert(`Select destination square for ${piece} (current position: ${fromPosition})`);
+                                }
+                            });
+                            canvas.add(svgPiece);
+                        });
+                    }
+                }
+            }
+        }
+
+        function coordsToPosition(left, top) {
+            const col = Math.floor(left / squareSize);
+            const row = 8 - Math.floor(top / squareSize);
+            return String.fromCharCode(col + 'a'.charCodeAt(0)) + row;
+        }
+
+        function updateHistory(move) {
+            history.push(move);
+            const historyDiv = document.getElementById('history');
+            historyDiv.innerHTML = history.join('<br/>');
+        }
+
+        function movePiece(from, to) {
+            const piece = canvas.getActiveObject();
+            if (!piece) return;
+
+            const fromCoords = positionToCoords(from);
+            const toCoords = positionToCoords(to);
+
+            if (piece && piece.left === fromCoords.x && piece.top === fromCoords.y) {
+                piece.set({
+                    left: toCoords.x,
+                    top: toCoords.y,
                 });
-            });
+                piece.setCoords();
+                canvas.renderAll();
+                updateHistory(`${piece.pieceColor} moves from ${from} to ${to}`);
+                turn = turn === 'white' ? 'black' : 'white'; // Switch turns
+                startTimer(); // Restart timer for the next player
+            }
         }
 
-        // Initialize the chess game
-        function initChessGame() {
-            createBoard();
-            addPieces();
+        function positionToCoords(position) {
+            const col = position.charCodeAt(0) - 'a'.charCodeAt(0);
+            const row = 8 - parseInt(position[1]);
+            return {
+                x: col * squareSize + squareSize / 2,
+                y: row * squareSize + squareSize / 2
+            };
         }
 
-        initChessGame();
+        window.addEventListener('keydown', function(event) {
+            if (event.key.match(/[a-h][1-8]/)) { // Check for valid square
+                const from = prompt("Enter the piece's current position (e.g., e2):");
+                if (from) {
+                    movePiece(from, event.key); // Move to the square indicated by the key
+                }
+            }
+        });
+
+        createChessboard();
+        addPieces();
+        startTimer();
     </script>
 </body>
 </html>
