--- a/fabricjschess/base2.html
+++ b/fabricjschess/base2.html
@@ -118,7 +118,7 @@
         createChessboard();
         addPieces();
 
-        // Enable piece dragging with pawn movement rules
+        // Enable piece dragging with movement rules
         canvas.on('object:moving', function(e) {
             const obj = e.target;
             const pieceType = obj.pieceType;
@@ -130,24 +130,54 @@
 
             let validMove = false;
 
-            if (pieceType === 'p') {
-                if (pieceColor === 'white') {
-                    if (startY === 6 && endY === 4 && startX === endX) {
-                        validMove = true; // Initial two-square move
-                    } else if (endY === startY - 1 && startX === endX) {
-                        validMove = true; // Single square move
-                    } else if (endY === startY - 1 && Math.abs(endX - startX) === 1) {
-                        validMove = true; // Diagonal capture
+            // Define movement rules for each piece
+            switch (pieceType) {
+                case 'p': // Pawn
+                    if (pieceColor === 'white') {
+                        if (startY === 6 && endY === 4 && startX === endX) {
+                            validMove = true; // Initial two-square move
+                        } else if (endY === startY - 1 && startX === endX) {
+                            validMove = true; // Single square move
+                        } else if (endY === startY - 1 && Math.abs(endX - startX) === 1) {
+                            validMove = true; // Diagonal capture
+                        }
+                    } else if (pieceColor === 'black') {
+                        if (startY === 1 && endY === 3 && startX === endX) {
+                            validMove = true; // Initial two-square move
+                        } else if (endY === startY + 1 && startX === endX) {
+                            validMove = true; // Single square move
+                        } else if (endY === startY + 1 && Math.abs(endX - startX) === 1) {
+                            validMove = true; // Diagonal capture
+                        }
                     }
-                } else if (pieceColor === 'black') {
-                    if (startY === 1 && endY === 3 && startX === endX) {
-                        validMove = true; // Initial two-square move
-                    } else if (endY === startY + 1 && startX === endX) {
-                        validMove = true; // Single square move
-                    } else if (endY === startY + 1 && Math.abs(endX - startX) === 1) {
-                        validMove = true; // Diagonal capture
+                    break;
+                case 'r': // Rook
+                    if (startX === endX || startY === endY) {
+                        validMove = true; // Horizontal or vertical move
                     }
-                }
+                    break;
+                case 'n': // Knight
+                    if ((Math.abs(startX - endX) === 2 && Math.abs(startY - endY) === 1) ||
+                        (Math.abs(startX - endX) === 1 && Math.abs(startY - endY) === 2)) {
+                        validMove = true; // L-shaped move
+                    }
+                    break;
+                case 'b': // Bishop
+                    if (Math.abs(startX - endX) === Math.abs(startY - endY)) {
+                        validMove = true; // Diagonal move
+                    }
+                    break;
+                case 'q': // Queen
+                    if (startX === endX || startY === endY || 
+                        Math.abs(startX - endX) === Math.abs(startY - endY)) {
+                        validMove = true; // Horizontal, vertical, or diagonal move
+                    }
+                    break;
+                case 'k': // King
+                    if (Math.abs(startX - endX) <= 1 && Math.abs(startY - endY) <= 1) {
+                        validMove = true; // One square in any direction
+                    }
+                    break;
             }
 
             if (validMove) {
