--- a/fabricjschess/base.html
+++ b/fabricjschess/base.html
@@ -79,7 +79,10 @@
                                 originY: 'center',
                                 hasControls: false,
                                 selectable: true,
-                                pieceColor: piece === piece.toUpperCase() ? 'white' : 'black' // Track piece color
+                                pieceColor: piece === piece.toUpperCase() ? 'white' : 'black', // Track piece color
+                                pieceType: piece.toLowerCase(), // Track piece type
+                                startX: col,
+                                startY: row
                             });
 
                             // Handle mouse down event
@@ -115,14 +118,83 @@
         createChessboard();
         addPieces();
 
-        // Enable piece dragging
+        // Enable piece dragging with movement rules
         canvas.on('object:moving', function(e) {
             const obj = e.target;
-            obj.set({
-                left: Math.round(obj.left / squareSize) * squareSize + squareSize / 2,
-                top: Math.round(obj.top / squareSize) * squareSize + squareSize / 2
-            });
-            console.log(`Moving piece to (${obj.left}, ${obj.top})`);
+            const pieceType = obj.pieceType;
+            const pieceColor = obj.pieceColor;
+            const startX = obj.startX;
+            const startY = obj.startY;
+            const endX = Math.round(obj.left / squareSize);
+            const endY = Math.round(obj.top / squareSize);
+
+            let validMove = false;
+
+            // Define movement rules for each piece
+            switch (pieceType) {
+                case 'p': // Pawn
+                    if (pieceColor === 'white') {
+                        if (startY === 6 && endY === 4 && startX === endX) {
+                            validMove = true; // Initial two-square move
+                        } else if (endY === startY - 1 && startX === endX) {
+                            validMove = true; // Single square move
+                        } else if (endY === startY - 1 && Math.abs(endX - startX) === 1) {
+                            validMove = true; // Diagonal capture
+                        }
+                    } else if (pieceColor === 'black') {
+                        if (startY === 1 && endY === 3 && startX === endX) {
+                            validMove = true; // Initial two-square move
+                        } else if (endY === startY + 1 && startX === endX) {
+                            validMove = true; // Single square move
+                        } else if (endY === startY + 1 && Math.abs(endX - startX) === 1) {
+                            validMove = true; // Diagonal capture
+                        }
+                    }
+                    break;
+                case 'r': // Rook
+                    if (startX === endX || startY === endY) {
+                        validMove = true; // Horizontal or vertical move
+                    }
+                    break;
+                case 'n': // Knight
+                    if ((Math.abs(startX - endX) === 2 && Math.abs(startY - endY) === 1) ||
+                        (Math.abs(startX - endX) === 1 && Math.abs(startY - endY) === 2)) {
+                        validMove = true; // L-shaped move
+                    }
+                    break;
+                case 'b': // Bishop
+                    if (Math.abs(startX - endX) === Math.abs(startY - endY)) {
+                        validMove = true; // Diagonal move
+                    }
+                    break;
+                case 'q': // Queen
+                    if (startX === endX || startY === endY || 
+                        Math.abs(startX - endX) === Math.abs(startY - endY)) {
+                        validMove = true; // Horizontal, vertical, or diagonal move
+                    }
+                    break;
+                case 'k': // King
+                    if (Math.abs(startX - endX) <= 1 && Math.abs(startY - endY) <= 1) {
+                        validMove = true; // One square in any direction
+                    }
+                    break;
+            }
+
+            if (validMove) {
+                obj.set({
+                    left: endX * squareSize + squareSize / 2,
+                    top: endY * squareSize + squareSize / 2
+                });
+                obj.startX = endX;
+                obj.startY = endY;
+                console.log(`Moved piece to (${endX}, ${endY})`);
+            } else {
+                obj.set({
+                    left: startX * squareSize + squareSize / 2,
+                    top: startY * squareSize + squareSize / 2
+                });
+                console.log(`Invalid move for ${pieceType} piece`);
+            }
         });
     </script>
 </body>
