--- a/fabricjschess/base.html
+++ b/fabricjschess/base.html
@@ -14,12 +14,10 @@
 <body>
     <canvas id="canvas" width="400" height="400"></canvas>
     <script>
-        // Initialize Fabric.js canvas
         const canvas = new fabric.Canvas('canvas');
-        const squareSize = 50; // Size of each square
+        const squareSize = 50;
         let turn = 'white'; // White goes first
 
-        // Create the chessboard
         function createChessboard() {
             for (let row = 0; row < 8; row++) {
                 for (let col = 0; col < 8; col++) {
@@ -27,7 +25,7 @@
                     const square = new fabric.Rect({
                         left: col * squareSize,
                         top: row * squareSize,
-                        fill: isLightSquare ? '#eee' : '#8B4513', // Dark brown for dark squares
+                        fill: isLightSquare ? '#eee' : '#8B4513',
                         width: squareSize,
                         height: squareSize,
                         selectable: false
@@ -37,7 +35,6 @@
             }
         }
 
-        // Load SVG pieces onto the chessboard
         function addPieces() {
             const pieces = {
                 'r': 'https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rdt45.svg',
@@ -69,7 +66,6 @@
                 for (let col = 0; col < 8; col++) {
                     const piece = boardState[row][col];
                     if (piece !== '.') {
-                        // Load the SVG piece
                         fabric.loadSVGFromURL(pieces[piece], function(objects, options) {
                             const svgPiece = fabric.util.groupSVGElements(objects, options);
                             svgPiece.set({
@@ -79,31 +75,24 @@
                                 originY: 'center',
                                 hasControls: false,
                                 selectable: true,
-                                pieceColor: piece === piece.toUpperCase() ? 'white' : 'black', // Track piece color
-                                pieceType: piece.toLowerCase(), // Track piece type
+                                pieceColor: piece === piece.toUpperCase() ? 'white' : 'black',
+                                pieceType: piece.toLowerCase(),
                                 startX: col,
                                 startY: row
                             });
 
-                            // Handle mouse down event
                             svgPiece.on('mousedown', function() {
                                 if ((turn === 'white' && this.pieceColor === 'white') || 
                                     (turn === 'black' && this.pieceColor === 'black')) {
-                                    console.log(`Selected ${this.pieceColor} piece`);
-                                    this.set({ opacity: 0.5 }); // Dim the selected piece
+                                    this.set({ opacity: 0.5 });
                                     canvas.setActiveObject(this);
-                                } else {
-                                    console.log(`It's not your turn to move ${this.pieceColor} pieces.`);
                                 }
                             });
 
-                            // Handle mouse up event
                             svgPiece.on('mouseup', function() {
                                 if (canvas.getActiveObject() === this) {
-                                    console.log(`Released ${this.pieceColor} piece`);
-                                    this.set({ opacity: 1 }); // Restore opacity
-                                    turn = turn === 'white' ? 'black' : 'white'; // Switch turns
-                                    console.log(`Turn switched to ${turn}`);
+                                    this.set({ opacity: 1 });
+                                    turn = turn === 'white' ? 'black' : 'white';
                                 }
                             });
 
@@ -114,11 +103,6 @@
             }
         }
 
-        // Initialize the chessboard and add the pieces
-        createChessboard();
-        addPieces();
-
-        // Enable piece dragging with movement rules
         canvas.on('object:moving', function(e) {
             const obj = e.target;
             const pieceType = obj.pieceType;
@@ -130,79 +114,70 @@
 
             let validMove = false;
 
-            // Check if the destination square is occupied by an opponent's piece
-            const targetPiece = canvas.getObjects().find(o => o.startX === endX && o.startY === endY && o !== obj);
-            const isCapture = targetPiece && targetPiece.pieceColor !== pieceColor;
-
-            // Define movement rules for each piece
             switch (pieceType) {
                 case 'p': // Pawn
                     if (pieceColor === 'white') {
-                        if (startY === 6 && endY === 4 && startX === endX && !targetPiece) {
-                            validMove = true; // Initial two-square move
-                        } else if (endY === startY - 1 && startX === endX && !targetPiece) {
-                            validMove = true; // Single square move
-                        } else if (endY === startY - 1 && Math.abs(endX - startX) === 1 && isCapture) {
+                        if ((startY === 6 && endY === 4 && startX === endX) || // Initial two-square move
+                            (endY === startY - 1 && startX === endX)) { // Single square move
+                            validMove = true;
+                        } else if (endY === startY - 1 && Math.abs(endX - startX) === 1) {
                             validMove = true; // Diagonal capture
                         }
                     } else if (pieceColor === 'black') {
-                        if (startY === 1 && endY === 3 && startX === endX && !targetPiece) {
-                            validMove = true; // Initial two-square move
-                        } else if (endY === startY + 1 && startX === endX && !targetPiece) {
-                            validMove = true; // Single square move
-                        } else if (endY === startY + 1 && Math.abs(endX - startX) === 1 && isCapture) {
+                        if ((startY === 1 && endY === 3 && startX === endX) || // Initial two-square move
+                            (endY === startY + 1 && startX === endX)) { // Single square move
+                            validMove = true;
+                        } else if (endY === startY + 1 && Math.abs(endX - startX) === 1) {
                             validMove = true; // Diagonal capture
                         }
                     }
                     break;
                 case 'r': // Rook
-                    if ((startX === endX || startY === endY) && (!targetPiece || isCapture)) {
-                        validMove = true; // Horizontal or vertical move
+                    if (startX === endX || startY === endY) {
+                        validMove = true;
                     }
                     break;
                 case 'n': // Knight
-                    if (((Math.abs(startX - endX) === 2 && Math.abs(startY - endY) === 1) ||
-                        (Math.abs(startX - endX) === 1 && Math.abs(startY - endY) === 2)) && (!targetPiece || isCapture)) {
-                        validMove = true; // L-shaped move
+                    if ((Math.abs(startX - endX) === 2 && Math.abs(startY - endY) === 1) ||
+                        (Math.abs(startX - endX) === 1 && Math.abs(startY - endY) === 2)) {
+                        validMove = true;
                     }
                     break;
                 case 'b': // Bishop
-                    if (Math.abs(startX - endX) === Math.abs(startY - endY) && (!targetPiece || isCapture)) {
-                        validMove = true; // Diagonal move
+                    if (Math.abs(startX - endX) === Math.abs(startY - endY)) {
+                        validMove = true;
                     }
                     break;
                 case 'q': // Queen
-                    if ((startX === endX || startY === endY || 
-                        Math.abs(startX - endX) === Math.abs(startY - endY)) && (!targetPiece || isCapture)) {
-                        validMove = true; // Horizontal, vertical, or diagonal move
+                    if (startX === endX || startY === endY || 
+                        Math.abs(startX - endX) === Math.abs(startY - endY)) {
+                        validMove = true;
                     }
                     break;
                 case 'k': // King
-                    if (Math.abs(startX - endX) <= 1 && Math.abs(startY - endY) <= 1 && (!targetPiece || isCapture)) {
-                        validMove = true; // One square in any direction
+                    if (Math.abs(startX - endX) <= 1 && Math.abs(startY - endY) <= 1) {
+                        validMove = true;
                     }
                     break;
             }
 
             if (validMove) {
-                if (isCapture) {
-                    canvas.remove(targetPiece); // Remove the captured piece
-                }
                 obj.set({
                     left: endX * squareSize + squareSize / 2,
                     top: endY * squareSize + squareSize / 2
                 });
                 obj.startX = endX;
                 obj.startY = endY;
-                console.log(`Moved piece to (${endX}, ${endY})`);
             } else {
                 obj.set({
                     left: startX * squareSize + squareSize / 2,
                     top: startY * squareSize + squareSize / 2
                 });
-                console.log(`Invalid move for ${pieceType} piece`);
             }
         });
+
+        createChessboard();
+        addPieces();
     </script>
 </body>
 </html>
